--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Cryptocurrencies | My Financial API{% endblock %}
+{% block title %}Cryptocurrencies | Arthanomos Financial API{% endblock %}
 {% block content %}
 
 <h2 class="mb-4">Cryptocurrencies</h2>
