--- a/templates/equity.html
+++ b/templates/equity.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Equities | My Financial API{% endblock %}
+{% block title %}Equities | Arthanomos Financial API{% endblock %}
 {% block content %}
 
 <h2 class="mb-4">Equities</h2>
@@ -28,7 +28,6 @@
       <th>Symbol</th>
       <th>Exchange</th>
       <th>Name</th>
-      <!-- Add more columns if needed -->
     </tr>
   </thead>
   <tbody></tbody>
