--- a/templates/etf.html
+++ b/templates/etf.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
-{% block title %}ETFs | My Financial API{% endblock %}
+{% block title %}ETFs | Arthanomos Financial API{% endblock %}
 {% block content %}
 
 <h2 class="mb-4">Exchange-Traded Funds (ETFs)</h2>
 <p>
-  Specify an <strong>Exchange</strong> if needed to filter ETFs, otherwise all ETFs are returned.
+  Specify an <strong>Exchange</strong> if needed to filter ETFs; otherwise all ETFs are returned.
 </p>
 
 <form class="row gy-2 gx-3 align-items-center" onsubmit="fetchETFs(event)">
