--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}My Financial API{% endblock %}</title>
+  <title>{% block title %}Arthanomos Financial API{% endblock %}</title>
 
   <!-- Bootstrap 5.3 CSS (CDN) -->
   <link 
@@ -17,7 +17,7 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{ url_for('home') }}">FinAPI</a>
+      <a class="navbar-brand" href="{{ url_for('home') }}">Arthanomos</a>
       <button 
         class="navbar-toggler" 
         type="button" 
@@ -32,8 +32,6 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-          <!-- Adjust as needed for each page -->
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('home') }}">Home</a>
           </li>
@@ -73,7 +71,7 @@
 
   <!-- FOOTER -->
   <footer class="bg-dark text-white text-center py-3 mt-5">
-    <p class="mb-0">&copy; Arthanomos :- Financial API. All rights reserved.</p>
+    <p class="mb-0">&copy; 2025 Arthanomos Financial API. All rights reserved.</p>
   </footer>
 
   <!-- Bootstrap 5.3 JS (Bundle includes Popper) -->
