--- a/templates/mutualfund.html
+++ b/templates/mutualfund.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Mutual Funds | My Financial API{% endblock %}
+{% block title %}Mutual Funds | Arthanomos Financial API{% endblock %}
 {% block content %}
 
 <h2 class="mb-4">Mutual Funds</h2>
