--- a/templates/research.html
+++ b/templates/research.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Research | My Financial API{% endblock %}
+{% block title %}Research | Arthanomos Financial API{% endblock %}
 {% block content %}
 
 <h2 class="mb-4">Research & Methodology</h2>
