--- a/templates/currency.html
+++ b/templates/currency.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Currencies | My Financial API{% endblock %}
+{% block title %}Currencies | Arthanomos Financial API{% endblock %}
 {% block content %}
 
 <h2 class="mb-4">Currencies</h2>
