--- a/templates/futures.html
+++ b/templates/futures.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Futures | My Financial API{% endblock %}
+{% block title %}Futures | Arthanomos Financial API{% endblock %}
 {% block content %}
 
 <h2 class="mb-4">Futures</h2>
