--- a/templates/indices.html
+++ b/templates/indices.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Indices | My Financial API{% endblock %}
+{% block title %}Indices | Arthanomos Financial API{% endblock %}
 {% block content %}
 
 <h2 class="mb-4">Indices</h2>
